<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_your_level"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/easy"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FF9800"
        android:text="@string/medium"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/btnEasy"
        app:layout_constraintStart_toStartOf="@+id/btnEasy"
        app:layout_constraintTop_toBottomOf="@+id/btnEasy" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:text="@string/hard"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/btnMedium"
        app:layout_constraintStart_toStartOf="@+id/btnMedium"
        app:layout_constraintTop_toBottomOf="@+id/btnMedium" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/test"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/btnHard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnHard"
        app:layout_constraintTop_toBottomOf="@+id/btnHard" />
</androidx.constraintlayout.widget.ConstraintLayout>